   undesirable to block on upload for 30 mins, but it's still a reasonable
   timeout on less well connected devices.
 * Do not report keys starting with '_' to the crash database. This can be used
   for keeping private keys in .crash files between crash and report time, or
   to store data between hooks etc., without cluttering reports.

Bug fixes:
 * test_signal_crashes: Clean up unexpected reports after every test, to avoid
   breaking all subsequent tests.
 * test_signal_crashes: Stop checking that gdb prints nothing on stderr, as
   latest gdb 7.6.50 now almost always prints some about missing source files.
 * setup.py: Make updating of hashbangs work when building without Java, and
   also apply it on bin/.
 * Print a warning when trying to retrace a report from a foreign architecture
   and gdb-multiarch is not installed. (LP: #1239395)

2.12.7 (2013-11-19)
-------------------
 * Properly fall back to lsb_release if /etc/os-release is invalid.
 * report.py, add_proc_info(): Add "CurrentDesktop" field with the value of
   $XDG_CURRENT_DESKTOP, if present. (LP: #1247904)
 * fileutils.py, get_all_system_reports(): Filter out "guest..." users, they
   might have a system UID. (LP: #1250679)
 * apt/dpkg: Don't call dpkg-divert with full path, it moved in Ubuntu 14.04.

2.12.6 (2013-10-25)
-------------------
 * SECURITY FIX: For setuid programs which drop their privileges after
   startup, make the report and core dumps owned by root, to avoid possible
   data disclosure. Also, change core dump files to permissions "0600".
   Thanks to Martin Carpenter for discovering this!
   (CVE-2013-1067, LP: #1242435)
 * sandboxutils.needed_runtime_packages(): Create cache directory for
   Contents.gz if missing. (LP: #933199)
 * apt/dpkg: Recognize options in apt sources.list. (LP: #1238620)

2.12.5 (2013-09-27)
-------------------
 * Report.add_os_info(): Do not overwrite already existing data.
   (LP: #1226776)